Bug 339294 - systemsettings shouldn't install headers and .so link
Summary: systemsettings shouldn't install headers and .so link
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.0.1
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-09-22 10:15 UTC by Harald Sitter
Modified: 2020-10-13 12:45 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Harald Sitter 2014-09-22 10:15:06 UTC
assuming libsystemsettingsview is not supposed to be used by the outside (which doesn't make much sense IMO) it should not install headers and a .so symlink

Reproducible: Always
Comment 1 Bhushan Shah 2015-02-08 16:45:23 UTC
Assigning to Plasma bugs
Comment 2 Nate Graham 2020-10-12 21:56:22 UTC
Is this still relevant?
Comment 3 David Edmundson 2020-10-12 22:06:00 UTC
>Is this still relevant?

Make install says yes.

@sitter should we statically link internally?
Comment 4 Bug Janitor Service 2020-10-13 00:24:00 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/systemsettings/-/merge_requests/29
Comment 5 Nicolas Fella 2020-10-13 12:45:35 UTC
Git commit 2b61b00dd33f9363c39a8d93642187b8759b621c by Nicolas Fella.
Committed on 13/10/2020 at 12:34.
Pushed by nicolasfella into branch 'master'.

Don't install headers and libs for systemsettingsview

We don't have any known users of this API.
Instead use static linking for the internal lib.

M  +0    -1    CMakeLists.txt
M  +1    -2    core/BaseData.h
M  +1    -2    core/BaseMode.h
M  +1    -16   core/CMakeLists.txt
M  +1    -3    core/MenuItem.h
M  +1    -2    core/MenuModel.h
M  +1    -2    core/MenuProxyModel.h
M  +1    -2    core/ModuleView.h

https://invent.kde.org/plasma/systemsettings/commit/2b61b00dd33f9363c39a8d93642187b8759b621c