Don't install headers and libs for systemsettingsview

We don't have any known users of this API.
Instead use static linking for the internal lib.

BUG: 339294