core/MenuModel.h
@@ -22,7 +22,6 @@
 #define MENUMODEL_H
 
 #include <QAbstractItemModel>
-#include "systemsettingsview_export.h"
 
 class MenuItem;
 
@@ -36,7 +35,7 @@ class MenuItem;
  * @author Ben Cooksley <bcooksley@kde.org>
  * @author Will Stephenson <wstephenson@kde.org>
  */
-class SYSTEMSETTINGSVIEW_EXPORT MenuModel : public QAbstractItemModel
+class MenuModel : public QAbstractItemModel
 {
     Q_OBJECT
 
