core/MenuProxyModel.h
@@ -22,7 +22,6 @@
 #define MENUPROXYMODEL_H
 
 #include <KCategorizedSortFilterProxyModel>
-#include "systemsettingsview_export.h"
 
 /**
  * @brief Provides a filter model for MenuModel
@@ -36,7 +35,7 @@
  * @author Will Stephenson <wstephenson@kde.org> 
  * @author Ben Cooksley <bcooksley@kde.org>
  */
-class SYSTEMSETTINGSVIEW_EXPORT MenuProxyModel : public KCategorizedSortFilterProxyModel
+class MenuProxyModel : public KCategorizedSortFilterProxyModel
 {
     Q_OBJECT
 
